2007-10-24  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        explicitly add some tests that currently cause DRT to hang.

        * platform/qt/Skipped:

2007-10-23  Justin Garcia  <justin.garcia@apple.com>

        Fixing an accidental change made in r25484.

        * editing/pasteboard/quirks-mode-br-1.html:
        * platform/mac/editing/pasteboard/quirks-mode-br-1-expected.checksum:
        * platform/mac/editing/pasteboard/quirks-mode-br-1-expected.txt:

2007-10-23  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Oliver Hunt.
        
        <rdar://problem/5544856> 
        REGRESSION: After typing 2-byte text, undo only undoes one keystroke at a time
        
        * platform/mac/editing/input/firstrectforcharacterrange-styled-expected.txt:
        * platform/mac/editing/input/text-input-controller-expected.txt:
        * platform/mac/editing/input/wrapped-line-char-rect-expected.txt:

2007-10-23  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Test for <rdar://problem/5543228> CrashTracer: [USER] 2 crashes in Safari at com.apple.WebCore: WebCore::HTMLInputElement::defaultEventHandler + 872

        * fast/forms/textfield-onchange-deletion-expected.txt: Added.
        * fast/forms/textfield-onchange-deletion.html: Added.

2007-10-23  Adam Roben  <aroben@apple.com>

        Add some SVG tests to the Windows Skipped file

        Reviewed by Oliver.

        * platform/win/Skipped:

2007-10-23  Darin Adler  <darin@apple.com>

        - removed numeric results so the test is more platform-independent

        * fast/js/math-expected.txt: Updated.
        * fast/js/resources/math.js: Updated.

2007-10-23  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15639
          Math functions

        * fast/js/math-expected.txt: Added.
        * fast/js/math.html: Added.
        * fast/js/resources/math.js: Added.
