@@ -1,10 +1,12 @@
 <script>
-if (window.layoutTestController)
+if (window.layoutTestController) {
      layoutTestController.dumpEditingCallbacks();
+     layoutTestController.dumpAsText();
+}
 </script>
 <p>This tests the pruning that delete does when the it merges two paragraphs when the selection to delete spans multiple blocks.</p>
-<p>You should see:<br>f<b>ar<br>baz</b></p>
-<div id="test" contenteditable="true">foo<b><div>bar</div><div>baz</div></b></div>
+<p>You should see:<br>b<b>ar<br>baz</b></p>
+<div id="test" contenteditable="true">boo<b><div>bar</div><div>baz</div></b></div>
 
 <script>
 var s = window.getSelection();
