@@ -1,44 +1,0 @@
-EDITING DELEGATE: shouldBeginEditingInDOMRange:range from 0 of DIV > BODY > HTML > #document to 2 of DIV > BODY > HTML > #document
-EDITING DELEGATE: webViewDidBeginEditing:WebViewDidBeginEditingNotification
-EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
-EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
-EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
-EDITING DELEGATE: shouldDeleteDOMRange:range from 1 of #text > DIV > BODY > HTML > #document to 1 of #text > DIV > B > DIV > BODY > HTML > #document
-EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
-EDITING DELEGATE: shouldChangeSelectedDOMRange:(null) toDOMRange:range from 1 of #text > DIV > BODY > HTML > #document to 1 of #text > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE
-EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
-EDITING DELEGATE: webViewDidChange:WebViewDidChangeNotification
-layer at (0,0) size 800x600
-  RenderView at (0,0) size 800x600
-layer at (0,0) size 800x600
-  RenderBlock {HTML} at (0,0) size 800x600
-    RenderBody {BODY} at (8,8) size 784x584
-      RenderBlock {P} at (0,0) size 784x18
-        RenderText {#text} at (0,0) size 781x18
-          text run at (0,0) width 781: "This tests the pruning that delete does when the it merges two paragraphs when the selection to delete spans multiple blocks."
-      RenderBlock {P} at (0,34) size 784x54
-        RenderText {#text} at (0,0) size 102x18
-          text run at (0,0) width 102: "You should see:"
-        RenderBR {BR} at (102,14) size 0x0
-        RenderText {#text} at (0,18) size 5x18
-          text run at (0,18) width 5: "f"
-        RenderInline {B} at (0,0) size 24x36
-          RenderText {#text} at (5,18) size 15x18
-            text run at (5,18) width 15: "ar"
-          RenderBR {BR} at (20,32) size 0x0
-          RenderText {#text} at (0,36) size 24x18
-            text run at (0,36) width 24: "baz"
-      RenderBlock {DIV} at (0,104) size 784x36
-        RenderBlock (anonymous) at (0,0) size 784x18
-          RenderText {#text} at (0,0) size 5x18
-            text run at (0,0) width 5: "f"
-          RenderInline {B} at (0,0) size 15x18
-            RenderText {#text} at (5,0) size 15x18
-              text run at (5,0) width 15: "ar"
-        RenderBlock (anonymous) at (0,18) size 784x18
-          RenderBlock {DIV} at (0,0) size 784x18
-            RenderText {#text} at (0,0) size 24x18
-              text run at (0,0) width 24: "baz"
-        RenderBlock (anonymous) at (0,36) size 784x0
-          RenderInline {B} at (0,0) size 0x0
-caret: position 1 of child 0 {#text} of child 4 {DIV} of child 1 {BODY} of child 0 {HTML} of document
